# $Id$

2006-04-11	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Base/Creatable.class.php: deprecated.

2006-04-09	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.11 released.

2006-04-06	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Cache/WatermarkedPeer.class.php, 
	core/Base/Instantiatable.class.php, core/Base/Creatable.class.php: new
	class and interfaces introduced by trunk's sync.

2006-04-05	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/OSQL/InsertOrUpdateQuery.class.php: support for Range and
	Timestamp in lazySet; arrived from trunk.

2006-04-05	Anton E. Lebedevich	<noiselist@pochta.ru>

	* main/Containers/UnifiedContainer.class.php: quite evil bug during
	non-lazy collections saving fixed.

2006-04-03	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* 0.2.10 released.

2006-04-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/, main/: last sync with 0.3 series - one-liners and minor
	cosmetics mostly.

2006-04-01	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Containers/UnifiedContainer.class.php: save logic fix merged
	back from trunk.

2006-03-13	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/: merged changes for PrimitiveIdentifiable and Form from
	trunk.

	* core/Form/FormUtils.clas.php, core/Form/MappedForm.class.php,
	main/Base/RequestType.class.php, main/Base/HttpRequest.class.php,
	main/Base/AbstractProtoClass.class.php: arrived from trunk too.

2006-03-09	Anton E. Lebedevich	<noiselist@pochta.ru>

	* main/Flow/: initial import.

2006-03-09	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* meta/: creation of prototyped classes implemented.

	* core/Form/PrimitiveIdentifier.class.php: for resolving incapsulated
	objects.

	* core/Form/: two last primitives separated from factory file.

	* meta/: all formatting stuff moved to separate class.

	* 0.2.9 released.

2006-03-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/OSQL/DBValue.class.php: don't quote integer values.
